# resume_deployment_hf

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  app.py  digital_resume.py  pyproject.toml  requirements.txt
static/: Resume_satish_2025.txt
