[project]
name = "satish-digital-resume"
version = "1.0.0"
description = "Interactive AI-powered digital resume and portfolio for Satish"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.7",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "gradio>=4.44.0",
    "requests>=2.31.0"
]
